{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 29,
  "lineage": "aef45c6d-5ea3-8da3-b872-d454791f904d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tfeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02dbb161f05522ac0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-0-201-203.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.201.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tfigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656731377955:internet-gateway/igw-0548e4000bc971d40",
            "id": "igw-0548e4000bc971d40",
            "owner_id": "656731377955",
            "tags": {
              "Name": "tflabs-igw",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "tflabs-igw",
              "mode_of_creation": "Terraform"
            },
            "vpc_id": "vpc-06e3d0b7971cf6e3d"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tfnatgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02dbb161f05522ac0",
            "connectivity_type": "public",
            "id": "nat-03566c0ab14f48355",
            "network_interface_id": "eni-0ab24e135e3403566",
            "private_ip": "192.168.1.59",
            "public_ip": "65.0.201.203",
            "subnet_id": "subnet-05abf85e885fa65f4",
            "tags": {
              "Name": "tflabs-natgw",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "tflabs-natgw",
              "mode_of_creation": "Terraform"
            }
          },
          "dependencies": [
            "aws_eip.tfeip",
            "aws_internet_gateway.tfigw",
            "aws_subnet.tfsubnet-1",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656731377955:route-table/rtb-03033ccabe17bfd24",
            "id": "rtb-03033ccabe17bfd24",
            "owner_id": "656731377955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03566c0ab14f48355",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-tflabs-private",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "rt-tflabs-private",
              "mode_of_creation": "Terraform"
            },
            "vpc_id": "vpc-06e3d0b7971cf6e3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tfeip",
            "aws_internet_gateway.tfigw",
            "aws_nat_gateway.tfnatgw",
            "aws_subnet.tfsubnet-1",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656731377955:route-table/rtb-0adf1c285ec442b90",
            "id": "rtb-0adf1c285ec442b90",
            "owner_id": "656731377955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0548e4000bc971d40",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-tflabs-public",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "rt-tflabs-public",
              "mode_of_creation": "Terraform"
            },
            "vpc_id": "vpc-06e3d0b7971cf6e3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-rt-public-assc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f00fa55b466954c6",
            "route_table_id": "rtb-0adf1c285ec442b90",
            "subnet_id": "subnet-05abf85e885fa65f4"
          },
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_route_table.tf-rt-public",
            "aws_subnet.tfsubnet-1",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-rt-public-assc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c8b4eec2024bd56",
            "route_table_id": "rtb-0adf1c285ec442b90",
            "subnet_id": "subnet-07acab10e730fcb64"
          },
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_route_table.tf-rt-public",
            "aws_subnet.tfsubnet-2",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-rt-public-assc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0957b7242d9ffa4ab",
            "route_table_id": "rtb-03033ccabe17bfd24",
            "subnet_id": "subnet-0b276323e7611faa2"
          },
          "dependencies": [
            "aws_eip.tfeip",
            "aws_internet_gateway.tfigw",
            "aws_nat_gateway.tfnatgw",
            "aws_route_table.tf-rt-private",
            "aws_subnet.tfsubnet-1",
            "aws_subnet.tfsubnet-3",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-rt-public-assc-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d65a603f5cdbecce",
            "route_table_id": "rtb-03033ccabe17bfd24",
            "subnet_id": "subnet-02cf337813f50d129"
          },
          "dependencies": [
            "aws_eip.tfeip",
            "aws_internet_gateway.tfigw",
            "aws_nat_gateway.tfnatgw",
            "aws_route_table.tf-rt-private",
            "aws_subnet.tfsubnet-1",
            "aws_subnet.tfsubnet-4",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-sg-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656731377955:security-group/sg-0e9797cbf901d4545",
            "description": "Allow Web and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9797cbf901d4545",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.140.27.185/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "103.140.27.185/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "103.140.27.185/32"
                ],
                "description": "TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tflabs-sg-web-ssh",
            "name_prefix": "",
            "owner_id": "656731377955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tflabs-sg-web-ssh",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "tflabs-sg-web-ssh",
              "mode_of_creation": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e3d0b7971cf6e3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfsubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656731377955:subnet/subnet-05abf85e885fa65f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/26",
            "id": "subnet-05abf85e885fa65f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656731377955",
            "tags": {
              "Name": "tflabs-public-1a",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "tflabs-public-1a",
              "mode_of_creation": "Terraform"
            },
            "vpc_id": "vpc-06e3d0b7971cf6e3d"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfsubnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656731377955:subnet/subnet-07acab10e730fcb64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.64/26",
            "id": "subnet-07acab10e730fcb64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656731377955",
            "tags": {
              "Name": "tflabs-public-1b",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "tflabs-public-1b",
              "mode_of_creation": "Terraform"
            },
            "vpc_id": "vpc-06e3d0b7971cf6e3d"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfsubnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656731377955:subnet/subnet-0b276323e7611faa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.128/26",
            "id": "subnet-0b276323e7611faa2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656731377955",
            "tags": {
              "Name": "tflabs-private-1a",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "tflabs-private-1a",
              "mode_of_creation": "Terraform"
            },
            "vpc_id": "vpc-06e3d0b7971cf6e3d"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tfsubnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656731377955:subnet/subnet-02cf337813f50d129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.192/26",
            "id": "subnet-02cf337813f50d129",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656731377955",
            "tags": {
              "Name": "tflabs-private-1b",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "tflabs-private-1b",
              "mode_of_creation": "Terraform"
            },
            "vpc_id": "vpc-06e3d0b7971cf6e3d"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:656731377955:vpc/vpc-06e3d0b7971cf6e3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/24",
            "default_network_acl_id": "acl-0e847536b3066b388",
            "default_route_table_id": "rtb-0ca3523f5ca46439a",
            "default_security_group_id": "sg-06d3157e0e044dea8",
            "dhcp_options_id": "dopt-6fae6c04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06e3d0b7971cf6e3d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ca3523f5ca46439a",
            "owner_id": "656731377955",
            "tags": {
              "Name": "tflabs",
              "mode_of_creation": "Terraform"
            },
            "tags_all": {
              "Name": "tflabs",
              "mode_of_creation": "Terraform"
            }
          }
        }
      ]
    }
  ]
}